--- a/chrome/autohide_sidebar.css
+++ b/chrome/autohide_sidebar.css
@@ -44,65 +44,56 @@ See the above repository for updates as well as full license text. */
 
 #main-window[sizemode="fullscreen"] #browser{ --uc-sidebar-width: 1px; }
 
-#sidebar-splitter {
-    display: none;
-}
+#sidebar-splitter{ display: none }
 
-#sidebar-header {
-    overflow: hidden;
-    color: var(--chrome-color, inherit) !important;
-    padding-inline: 0 !important;
+#sidebar-header{
+  overflow: hidden;
+  color: var(--chrome-color, inherit) !important;
+  padding-inline: 0 !important;
 }
 
 #sidebar-header::before,
-#sidebar-header::after {
-    content: "";
-    display: flex;
-    padding-left: 8px;
+#sidebar-header::after{
+  content: "";
+  display: flex;
+  padding-left: 8px;
 }
 
 #sidebar-header,
-#sidebar {
-    transition: min-width var(--uc-autohide-transition-duration)
-        var(--uc-autohide-transition-type) var(--uc-autohide-sidebar-delay) !important;
-    min-width: var(--uc-sidebar-width) !important;
-    will-change: min-width;
+#sidebar{
+  transition: min-width var(--uc-autohide-transition-duration) var(--uc-autohide-transition-type) var(--uc-autohide-sidebar-delay) !important;
+  min-width: var(--uc-sidebar-width) !important;
+  will-change: min-width;
 }
 #sidebar-box:hover > #sidebar-header,
-#sidebar-box:hover > #sidebar {
-    min-width: var(--uc-sidebar-hover-width) !important;
-    transition-delay: 0ms !important;
+#sidebar-box:hover > #sidebar{
+  min-width: var(--uc-sidebar-hover-width) !important;
+  transition-delay: 0ms !important;
 }
 
-.sidebar-panel {
-    background-color: transparent !important;
-    color: var(--newtab-text-primary-color) !important;
+.sidebar-panel{
+  background-color: transparent !important;
+  color: var(--newtab-text-primary-color) !important;
 }
 
-.sidebar-panel #search-box {
-    -moz-appearance: none !important;
-    background-color: rgba(249, 249, 250, 0.1) !important;
-    color: inherit !important;
+.sidebar-panel #search-box{
+  -moz-appearance: none !important;
+  background-color: rgba(249,249,250,0.1) !important; 
+  color: inherit !important;
 }
 
 /* Add sidebar divider and give it background */
 
 #sidebar,
-#sidebar-header {
-    background-color: inherit !important;
-    border-inline: 1px solid rgb(80, 80, 80);
-    border-inline-width: 0px 1px;
+#sidebar-header{
+  background-color: inherit !important;
+  border-inline: 1px solid rgb(80,80,80);
+  border-inline-width: 0px 1px;
 }
 
-<<<<<<< HEAD
-#sidebar-box:not([positionend]) > :-moz-locale-dir(rtl),
-#sidebar-box[positionend] > * {
-    border-inline-width: 1px 0px;
-=======
 #sidebar-box:not([positionend],[sidebar-positionend]) > :-moz-locale-dir(rtl),
 #sidebar-box:is([positionend],[sidebar-positionend]) > *{
   border-inline-width: 1px 0px;
->>>>>>> upstream/master
 }
 @media -moz-pref("sidebar.revamp") {
   #sidebar, #sidebar-header{ border-style: none }
@@ -110,21 +101,12 @@ See the above repository for updates as well as full license text. */
 }
 /* Move statuspanel to the other side when sidebar is hovered so it doesn't get covered by sidebar */
 
-<<<<<<< HEAD
-#sidebar-box:not([positionend]):hover ~ #appcontent #statuspanel {
-    inset-inline: auto 0px !important;
-}
-#sidebar-box:not([positionend]):hover ~ #appcontent #statuspanel-label {
-    margin-inline: 0px !important;
-    border-left-style: solid !important;
-=======
 #sidebar-box:not([positionend],[sidebar-positionend]):hover ~ #appcontent #statuspanel{
   inset-inline: auto 0px !important;
 }
 #sidebar-box:not([positionend],[sidebar-positionend]):hover ~ #appcontent #statuspanel-label{
   margin-inline: 0px !important;
   border-left-style: solid !important; 
->>>>>>> upstream/master
 }
 @media -moz-pref("userchrome.autohide-sidebar.static-layout.enabled"){
   #sidebar-box{
